<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="Daftar Gawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_marginTop="16dp"
        android:id="@+id/recycling_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="Kondisi Gawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/quality_1"
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/quality_2"
            android:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/quality_3"
            android:text="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/quality_4"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/quality_5"
            android:text="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>


    <EditText
        android:inputType="textMultiLine"
        android:layout_margin="16dp"
        android:id="@+id/recycling_descEdt"
        android:hint="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="number"
        android:layout_margin="16dp"
        android:id="@+id/recycling_jumlah_barang"
        android:hint="@string/jumlah_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/no_image_2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:id="@+id/recycling_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <!--<Button-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="@string/image"-->
        <!--android:id="@+id/recycling_Image"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom"
            android:id="@+id/recycling_submit"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>